summary report image changes #66

--- a/nextflow.config
+++ b/nextflow.config
@@ -24,4 +24,5 @@ env {
     PYTHONPATH = "/usr/local/lib/python3.11/site-packages"
     R_LIBS_USER = "/opt/R/4.3.2/lib/R/library"
     R_LIBS = "/opt/R/4.3.2/lib/R/library"
+	PYTHONHASHSEED=333
 }
